--- a/test_site/css/style.css
+++ b/test_site/css/style.css
@@ -6,6 +6,7 @@
   background-repeat: round no-repeat;
   background-position: left top;
   background-size: auto;
+  background-color: gray;
   width: 100%;
   height: 8000px;
 }
