--- a/test_site/css/style.css
+++ b/test_site/css/style.css
@@ -2,11 +2,11 @@
 /*Founts*/
 /*Backgrounds*/
 .background-main {
-  background-image: url(../img/background.png);
+  /*background-image: url(../img/background.png);*/
   background-repeat: round no-repeat;
   background-position: left top;
   background-size: auto;
-  background-color: blue;
+  background-color: gray;
   width: 100%;
   height: 8000px;
 }
