--- a/Stepik/assets/css/style.css
+++ b/Stepik/assets/css/style.css
@@ -1,3 +1,7 @@
+:root {
+    margin: 0;
+    padding: 0;
+}
 * {
     margin: 0;
     padding: 0;
@@ -16,18 +20,26 @@ a:hover {
     border-collapse: collapse;
 }
 /* Заголовки */
-h1 {
-
+h1 {    
+    font-family: 'Open Sans', sans-serif;    
+    font-weight: 400;
+    font-size: 47px;
+    letter-spacing: 0.08em;
+    text-transform: uppercase;
+    color: #fff;
+    text-shadow: 1px 1px 1px #000;
 }
 h2 {
-    font-family: 'Open Sans';
+    font-family: "Open Sans", sans-serif;
+    font-weight: 700;
     font-size: 40px;
-    font-weight: bold;
-    letter-spacing: 1px;
+    letter-spacing: 0.04em;
 }
 h5 {
-    font-family: 'Open Sans';
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
     font-size: 48px;
+    letter-spacing: 0.08em;
 }
 /* Buttons */
 .button-main-1 {
@@ -75,7 +87,8 @@ h5 {
     border: 0;       
 }
 .button-1 {
-    margin-top: 12vh;
+    margin-left: auto;
+    margin-right: auto;
 }
 .button-2 {
     margin-top: 3vh;
@@ -106,95 +119,168 @@ body {
     content: '';      
 }
 header {
-    position: relative;
+    position: absolute;
+    display: flex;
+    align-items: center;
     left: 0;
     top: 0;
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 80px;
     background-color: #29A28C11;
+    z-index: 1;
 }
-.logo {
+.header-row {
+    display: flex;
+    position: relative;
+}
+.header-logo {
+    display: flex;    
+    gap: 11px;
     margin: 0;
     padding: 0;
     font-family: 'Open Sans';
     font-size: 18px;
     font-weight: bold;
     color: #fff;
-    text-transform: uppercase;
-    display: flex;
-    align-items: center;
-    justify-content: start;
+    text-transform: uppercase;    
+    align-items: center;    
+    flex-wrap: nowrap;    
 }
-.logo p {
-    margin: 0 0 0 11px;
+.header-logo img {    
+    width: 51px;
+    height: 51px;        
+                
 }
-.nav-col {
-    display: flex;
-    align-items: center;
-    justify-content: end;
+.header-logo a {
+    position: relative;
+    height: 100%;
+    text-align: center;   
 }
-nav {
+.header-logo p {
+    display: inline-block;    
+}
+.header-menu {
     width: 100%;
+    height: 100%;
 }
-ul.menu {    
+.header-menu a {
+    display: flex;
+    white-space: nowrap;
+    align-items: center;
+    justify-content: center;
+}
+.header-menu-list {    
     margin: 0;
     padding: 0;
     display: flex;
     align-items: center;
-    justify-content: space-between;    
+    justify-content: space-between;
+    height: 100%;    
 }
-.nav-item {    
+.header-menu-item {
+    display: flex;                
+    position: relative;   
     font-family: 'Open Sans';
     font-size: 18px;    
     color: #fff;
-    text-wrap: nowrap;      
+    height: 100%;
+    
 }
-.nav-item:hover {
+.header-menu-item a {
+    height: 100%;    
+}
+.header-menu-item:hover {
     color: #017B65;
     cursor: pointer;
 }
 .sub-menu {
     display: none;
-    position: absolute;
-    top: 38px;
-    left: -60px;       
-    padding: 2vh;    
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+    position: absolute;    
+    padding: 0;
+    flex-direction: column;    
     background-color: #29A28C11;
-    border-radius: 0 0 10px 10px;         
+    border-radius: 0 0 10px 10px;
+    justify-content: center;
+    top: 50px;
+    box-shadow: 0px 0px 100px #29A28C11;             
+} 
+.sub-menu li {
+    margin: 5% 0;
+} 
+li:hover > .sub-menu  {
+    display: flex;    
 }
-.sub-item {
-    padding: 15px;
-}
-.services {
-    position: relative;        
-}
-.services:hover > .sub-menu {
-    display: flex;
-    
 
 
-
-}
 /*Header end`s, main start`s*/
 /* Section 1 */
-h1 {
-    margin-top: 25vh;
-    text-transform: uppercase;
-    font-family: 'Open Sans';    
-    font-size: 47px;
-    letter-spacing: 11px;
-    color: #fff;
-    text-shadow: 1px 1px 1px #000;
+.section-1  {
+    position: relative;    
+    height: 758px;
+    padding-top: 211px;
+         
 }
-.cons-arrow {
-    margin-top: 10vh;
+.section-1::before {
+    content: '';
+    background: url(../img/background-1.png);    
+    background-repeat: no-repeat;
+    background-size: cover;    
+   
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;    
+}
+.section-1::after {
+    content: '';    
+    background-color: #0D0C21;
+    opacity: 0.35;
+    
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;
+}
+.main-text-row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 872px;    
+    height: 185px;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+.main-text-col {
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+}
+.main-button-row {    
+    margin-top: 50px; 
+}
+.main-button-col {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.main-arrow-row {
+    margin-top: 49px;
+}
+.main-arrow-col {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 /* Section 2 */
 .section-2 {
-    margin-top: 300px;
+    margin-top: 190px;
 }
 .section-2 div:has(>h5) {
     border-right: 2px solid #29A28C;
@@ -203,9 +289,18 @@ h1 {
 .section-2 div:has(>h5):last-child {
     border-right: 0;
 }
+.section-2 div:has(>h5) p {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    letter-spacing: 0.02em;
+    text-transform: lowercase;
+    text-align: center;
+    color: #000;
+}
 /* Section 3 */
 .section-3 {
-    margin-top: 150px;
+    margin-top: 180px;
 }
 .section-3 div>img {
     width: 100%;
@@ -218,8 +313,12 @@ h1 {
     padding-top: 2rem;    
 }
 .section-3 div>span.text-1 {
-    font: bold 40px 'Open Sans';
-    letter-spacing: 1px;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 700;
+    font-size: 40px;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #000;
     position: relative;
     display: block;
     margin-bottom: 6rem;
@@ -241,21 +340,28 @@ h1 {
     height: 20px;
 }
 .section-3  div>span.text-2 {
-    font: 23px 'Open Sans';
+    font-family: "Open Sans", sans-serif;
+    font-weight: 400;
+    font-size: 23px;
+    letter-spacing: 0.03em;
     display: block;
 }
 .section-3  div>span.text-3 {
     display: inline-block;
     margin-top: auto;        
-    font: 13px 'Open Sans';                    
+    font-family: "Open Sans", sans-serif;
+    font-weight: 300;
+    font-size: 13px;     
+    line-height: 152%;
+    letter-spacing: 0.09em;
+    text-align: center;                    
 }
 /* Section 4 Main services */
 .section-4 {
-    margin-top: 10rem;
-    padding-bottom: 100px;
+    margin-top: 239px;    
 }
-.section-4 h2 {
-    margin-bottom: 8rem;
+.services-row {
+    margin-top: 130px;
 } 
 .service-1-wrap {
     display: flex;
@@ -294,10 +400,11 @@ h1 {
     width: 100%;
     margin: auto 0;
     height: 80px;    
-    font: 20px 'Open Sans';
-    letter-spacing: 1px;
-    line-height: 139.7%;
-    justify-self: center;         
+    font-weight: 400;
+    font-size: 20px;   
+    line-height: 140%;
+    letter-spacing: 0.07em;
+    text-transform: uppercase;         
 }
 .service-1-2 {    
     display: block;
@@ -305,9 +412,11 @@ h1 {
     width: 100%;
     margin: auto 0;
     height: 200px;        
-    font: lighter 14px 'Open Sans';
-    letter-spacing: -1px;
-    line-height: 153.2%;
+    ont-family: "Open Sans", sans-serif;
+    font-weight: 300;
+    font-size: 14px;     
+    line-height: 153%;
+    letter-spacing: -0.01em;
     text-wrap: wrap;     
 }
 .service-1-wrap > div>img {
@@ -339,12 +448,11 @@ div.service-1-wrap > a button:hover, div.service-1-wrap > a button:hover svg pat
 }
 /* Section 5 Our project`s */
 .section-5 {
-    margin-top: 10rem;
-    margin-bottom: 10rem;
+    margin-top: 121px;    
 }
 .slider-row {
-    margin-top: 10rem;
-    margin-bottom: 5rem;
+    margin-top: 135px;
+    margin-bottom: 69px;
 }
 .slider {
     display: flex;
@@ -377,13 +485,22 @@ div.service-1-wrap > a button:hover, div.service-1-wrap > a button:hover svg pat
     display: block;
 }
 .project-text-1 {
-    font: 36px "Open Sans";
-    letter-spacing: 4.5%;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 400;
+    font-size: 36px;
+    letter-spacing: 0.04em;
     text-transform: uppercase;
 }
 .project-text-2 {
-    font: 18px 'Open Sans';
-    line-height: 150%;
+    width: 524px;
+    height: 221px;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 151%;
+    letter-spacing: 0.01em;
+    text-align: left;
+    overflow-wrap: break-word;    
 }
 .carousel-control-prev {
     position: absolute;
@@ -397,11 +514,15 @@ div.service-1-wrap > a button:hover, div.service-1-wrap > a button:hover svg pat
 }
 /* Section 6 Our work process */
 .section-6 {
-    margin-top: 10rem;
-    margin-bottom: 10rem;
+    margin-top: 180px;
 }
 .section-6 h2 {
-    margin-bottom: 10rem;
+    
+}
+.process {
+    margin-top: 130px;
+    display: flex;
+    flex-wrap: nowrap;
 }
 
 .process-1 {    
@@ -419,8 +540,7 @@ div.service-1-wrap > a button:hover, div.service-1-wrap > a button:hover svg pat
 .process-3 {    
     display: flex;
     flex-direction: column;
-    width: 548px;
-    height: 449px;
+    width: 548px; height: 449px;
 }
 div.process-1>div {
     border: 1px solid #29A28C;
@@ -436,24 +556,30 @@ div.process>div:not(:last-child) {
 
 .process-text-1 {
     display: block;
-    font: 36px 'Open Sans';    
+    font-family: "Open Sans", sans-serif;
+    font-weight: 400;
+    font-size: 36px;
+    letter-spacing: 0.04em;
     text-transform: uppercase;
 }
 .process-text-2 {
     display: block;
-    font: 18px 'Open Sans';
-    letter-spacing: -1px;
-    line-height: 150.7%;
+    width: 548px;
+    height: 291px;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 151%;
+    letter-spacing: 0.01em;
     margin-top: auto;
     margin-bottom: auto;
 }
 /* Section 7 Tools and technologies */
 .section-7 {
-    margin-top: 10rem;
-    margin-bottom: 10rem;
+    margin-top: 180px;    
 }
-.section-7 h2 {
-    margin-bottom: 10rem;
+.tools-row {
+    margin-top: 172px;
 }
 .tools {
     display: flex;
@@ -463,8 +589,7 @@ div.process>div:not(:last-child) {
 }
 /* Section 8 Card and form */
 .section-8 {
-    margin-top: 10rem;
-    margin-bottom: 10rem;
+    margin-top: 189px;    
 }
 .card {
     display: flex;
@@ -485,21 +610,29 @@ div.process>div:not(:last-child) {
     margin-bottom: 15px;
 }
 .card-name {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 183%;
+    letter-spacing: 0.04em;
     text-transform: uppercase;
-    font: 20px 'Open Sans';
-    letter-spacing: 1.5px;
-    line-height: 182.7%;
 }
 .card-job-title {
-    font: 18px lighter 'Open Sans';
-    letter-spacing: 1px;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+    letter-spacing: 0.03em;
     margin-bottom: 28px;    
 }
 .card-text {
-    font: 16px 'Open Sans';
-    letter-spacing: 1px;
+    width: 419px;
+    height: 67px;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 300;
+    font-size: 16px;
+    letter-spacing: 0.03em;
     text-align: center;
-    padding: 0 6rem;
+    color: #515151;
     margin-bottom: 53px;    
 }
 .grade {
@@ -594,7 +727,7 @@ div.process>div:not(:last-child) {
 }
 /* Footer */
 footer {
-    margin-top: 10rem;
+    margin-top: 180px;
     height: 475px;    
 }
 .footer-row {
@@ -607,6 +740,7 @@ footer {
 }
 footer .logo p {
     color: #000;
+    margin: 0;
 }
 footer .logo {
     justify-content: center;
