--- a/Stepik/assets/css/style.css
+++ b/Stepik/assets/css/style.css
@@ -84,7 +84,11 @@ h5 {
 .button-main-3 {
     width: 100%;
     height: 35px;    
-    border: 0;       
+    border: 0;
+    background-color: transparent;       
+}
+.button-main-3:hover {
+    color: #017B65;
 }
 .button-1 {
     margin-left: auto;
@@ -96,27 +100,6 @@ h5 {
 /* Header */
 body {
     position: relative;            
-}
-.background-wrapper {    
-    position: absolute;
-    box-sizing: border-box;
-    background-image: url(../img/background-1.png);
-        
-    top: 0;
-    left: -2px;
-    width: 100%;
-    height: 758px;             
-    background-repeat: no-repeat;
-    background-size: cover;
-    z-index: -1;     
-}
-.background-wrapper::before {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;    
-    background-color: #00000065;
-    content: '';      
 }
 header {
     position: absolute;
@@ -218,15 +201,16 @@ li:hover > .sub-menu  {
 /* Section 1 */
 .section-1  {
     position: relative;    
-    height: 758px;
-    padding-top: 211px;
+    height: 900px;
+    padding-top: 277px;
          
 }
 .section-1::before {
     content: '';
     background: url(../img/background-1.png);    
     background-repeat: no-repeat;
-    background-size: cover;    
+    background-size: cover;
+    height: 900px;    
    
     top: 0;
     left: 0;
@@ -239,6 +223,7 @@ li:hover > .sub-menu  {
     content: '';    
     background-color: #0D0C21;
     opacity: 0.35;
+    height: 900px;
     
     top: 0;
     left: 0;
@@ -425,14 +410,7 @@ li:hover > .sub-menu  {
     fill: #fff;
     
 }
-div.service-1-wrap > a {
-    display: block;
-    box-sizing: border-box;
-    width: 100%;
-    height: fit-content;
-    margin-top: auto;           
-}
-div.service-1-wrap > a button {
+div.service-1-wrap > button {
     display: flex;
     font: lighter 16px 'Open Sans';
     color: #000;
@@ -441,7 +419,7 @@ div.service-1-wrap > a button {
     justify-content: space-between;
     align-items: center;              
 }
-div.service-1-wrap > a button:hover, div.service-1-wrap > a button:hover svg path {
+div.service-1-wrap > button:hover, div.service-1-wrap > button:hover svg path {
     color: #29A28C;
     fill: #29A28C;
     stroke: #29A28C;
@@ -468,6 +446,11 @@ div.service-1-wrap > a button:hover, div.service-1-wrap > a button:hover svg pat
     align-items: center;
     justify-content: space-between;
     letter-spacing: 2.5px;
+}
+.btn-4:hover svg path {
+    color: #29A28C;
+    fill: #29A28C;
+    stroke: #29A28C;
 }
 .img-2 {
     box-sizing: border-box;
