--- a/Stepik/assets/css/style.css
+++ b/Stepik/assets/css/style.css
@@ -499,15 +499,11 @@ div.service-1-wrap > button:hover, div.service-1-wrap > button:hover svg path {
 .section-6 {
     margin-top: 180px;
 }
-.section-6 h2 {
-    
-}
 .process {
     margin-top: 130px;
     display: flex;
     flex-wrap: nowrap;
 }
-
 .process-1 {    
     display: flex;
     flex-direction: column;
@@ -536,7 +532,6 @@ div.process-1>div {
 div.process>div:not(:last-child) {
     margin-right: 1rem;
 }
-
 .process-text-1 {
     display: block;
     font-family: "Open Sans", sans-serif;
@@ -809,4 +804,10 @@ footer .container .row:last-child {
     flex-direction: column;
     justify-content: top;
     text-align: right;
+}
+
+@media (max-width: 1450px){
+    .process {        
+        flex-wrap: wrap;
+    }
 }
